// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`synchronizeContacts function should synchronize contacts: adanMuellerInCozy 1`] = `
Array [
  Object {
    "_type": "io.cozy.contacts",
    "address": Array [],
    "birthday": undefined,
    "company": undefined,
    "cozyMetadata": Object {
      "createdAt": "2018-05-05T09:09:00.115Z",
      "createdByApp": "konnector-google",
      "createdByAppVersion": "2.0.0",
      "doctypeVersion": 2,
      "importedAt": "2018-05-05T09:09:00.115Z",
      "importedFrom": "konnector-google",
      "sync": Object {
        "45c49c15-4b00-48e8-8bfd-29f8177b89ff": Object {
          "contactsAccountsId": "45c49c15-4b00-48e8-8bfd-29f8177b89ff",
          "id": "people/944070",
          "konnector": "konnector-google",
          "lastSync": "2018-05-05T09:09:00.115Z",
          "remoteRev": "6092c3ca-c9f8-4abb-a27b-3add4158bfc2",
        },
      },
      "updatedAt": "2018-05-05T09:09:00.115Z",
      "updatedByApps": Array [
        "konnector-google",
      ],
    },
    "email": Array [],
    "metadata": Object {
      "google": Object {
        "metadata": Object {
          "deleted": false,
        },
      },
      "version": 1,
    },
    "name": Object {
      "familyName": "Mueller",
      "givenName": "Adan",
    },
    "note": undefined,
    "phone": Array [],
    "vendorId": "people/944070",
  },
]
`;

exports[`synchronizeContacts function should synchronize contacts: johnDoeInCozy 1`] = `
Array [
  Object {
    "_rev": "9a045a8e-8db7-49eb-a0b3-8388566f8a9c",
    "_type": "io.cozy.contacts",
    "address": Array [],
    "birthday": "1955-2-22",
    "company": "Cozy cloud",
    "cozyMetadata": Object {
      "createdAt": "2016-06-30T09:33:00.123Z",
      "createdByApp": "Contacts",
      "createdByAppVersion": "2.0.0",
      "doctypeVersion": 2,
      "importedAt": "2016-06-30T09:33:00.123Z",
      "importedFrom": "konnector-google",
      "sourceAccount": "45c49c15-4b00-48e8-8bfd-29f8177b89ff",
      "sync": Object {
        "45c49c15-4b00-48e8-8bfd-29f8177b89ff": Object {
          "contactsAccountsId": "45c49c15-4b00-48e8-8bfd-29f8177b89ff",
          "id": "people/987654",
          "konnector": "konnector-google",
          "lastSync": "2018-05-05T09:09:00.115Z",
          "remoteRev": "6020dd2f-c9b8-4865-bdbd-078faad65204",
        },
      },
      "updatedAt": "2018-05-05T09:09:00.115Z",
      "updatedByApps": Array [
        "Contacts",
        "konnector-google",
      ],
    },
    "email": Array [
      Object {
        "address": "john.doe@posteo.net",
        "primary": false,
        "type": "personal",
      },
      Object {
        "address": "john.doe@cozycloud.cc",
        "primary": true,
      },
    ],
    "id": "john-doe-edited",
    "metadata": Object {
      "google": Object {
        "metadata": Object {
          "deleted": false,
        },
      },
      "version": 1,
    },
    "name": Object {
      "familyName": "Doe",
      "givenName": "John",
    },
    "note": undefined,
    "phone": Array [],
    "vendorId": "people/987654",
  },
]
`;

exports[`synchronizeContacts function should synchronize contacts: johnDoeInGoogle 1`] = `
Array [
  Object {
    "addresses": Array [],
    "biographies": undefined,
    "birthdays": Array [
      Object {
        "date": Object {
          "day": "22",
          "month": "2",
          "year": "1955",
        },
        "metadata": Object {
          "primary": true,
        },
      },
    ],
    "emailAddresses": Array [
      Object {
        "metadata": Object {
          "primary": false,
        },
        "type": "personal",
        "value": "john.doe@posteo.net",
      },
      Object {
        "metadata": Object {
          "primary": true,
        },
        "type": undefined,
        "value": "john.doe@cozycloud.cc",
      },
    ],
    "names": Array [
      Object {
        "familyName": "Doe",
        "givenName": "John",
      },
    ],
    "organizations": Array [
      Object {
        "name": "Cozy cloud",
      },
    ],
    "phoneNumbers": Array [],
  },
]
`;

exports[`synchronizeContacts function should synchronize contacts: kayleighYundtInCozy 1`] = `
Array [
  Object {
    "_type": "io.cozy.contacts",
    "address": Array [],
    "birthday": undefined,
    "company": undefined,
    "cozyMetadata": Object {
      "createdAt": "2018-05-05T09:09:00.115Z",
      "createdByApp": "konnector-google",
      "createdByAppVersion": "2.0.0",
      "doctypeVersion": 2,
      "importedAt": "2018-05-05T09:09:00.115Z",
      "importedFrom": "konnector-google",
      "sync": Object {
        "45c49c15-4b00-48e8-8bfd-29f8177b89ff": Object {
          "contactsAccountsId": "45c49c15-4b00-48e8-8bfd-29f8177b89ff",
          "id": "people/751021",
          "konnector": "konnector-google",
          "lastSync": "2018-05-05T09:09:00.115Z",
          "remoteRev": "958e26de-80d2-4051-8ba9-ae954dffd9f6",
        },
      },
      "updatedAt": "2018-05-05T09:09:00.115Z",
      "updatedByApps": Array [
        "konnector-google",
      ],
    },
    "email": Array [],
    "metadata": Object {
      "google": Object {
        "metadata": Object {
          "deleted": false,
        },
      },
      "version": 1,
    },
    "name": Object {
      "familyName": "Yundt",
      "givenName": "Kayleigh",
    },
    "note": undefined,
    "phone": Array [],
    "vendorId": "people/751021",
  },
]
`;

exports[`synchronizeContacts function should synchronize contacts: larueCreminInCozy 1`] = `
Array [
  Object {
    "address": Array [],
    "birthday": undefined,
    "company": undefined,
    "cozyMetadata": Object {
      "createdAt": "2014-02-22T09:55:00.222Z",
      "createdByApp": "konnector-google",
      "createdByAppVersion": "2.0.0",
      "doctypeVersion": 2,
      "importedAt": "2014-02-22T09:55:00.222Z",
      "importedFrom": "konnector-google",
      "sourceAccount": "cb31eb3e-989e-4818-8b45-afed904237da",
      "sync": Object {
        "45c49c15-4b00-48e8-8bfd-29f8177b89ff": Object {
          "contactsAccountsId": "45c49c15-4b00-48e8-8bfd-29f8177b89ff",
          "id": "people/78485",
          "konnector": "konnector-google",
          "lastSync": "2018-05-05T09:09:00.115Z",
          "remoteRev": "6deab8dd-5a0f-451d-bcfe-fd81dd57bdcd",
        },
      },
      "updatedAt": "2018-05-05T09:09:00.115Z",
      "updatedByApps": Array [
        "Contacts",
        "konnector-google",
      ],
    },
    "email": Array [],
    "id": "larue-cremin-attached-to-another-source",
    "metadata": Object {
      "google": Object {
        "metadata": undefined,
      },
      "version": 1,
    },
    "name": Object {
      "familyName": "Cremin",
      "givenName": "Larue",
    },
    "note": undefined,
    "phone": Array [],
    "vendorId": undefined,
  },
]
`;

exports[`synchronizeContacts function should synchronize contacts: larueCreminInGoogle 1`] = `
Array [
  Object {
    "addresses": Array [],
    "biographies": undefined,
    "birthdays": Array [],
    "emailAddresses": Array [],
    "names": Array [
      Object {
        "familyName": "Cremin",
        "givenName": "Larue",
      },
    ],
    "organizations": undefined,
    "phoneNumbers": Array [],
  },
]
`;

exports[`synchronizeContacts function should synchronize contacts: reinholdJenkinsInCozy 1`] = `
Array [
  Object {
    "address": Array [],
    "birthday": undefined,
    "company": undefined,
    "cozyMetadata": Object {
      "createdAt": "2016-05-11T09:09:00.222Z",
      "createdByApp": "Contacts",
      "createdByAppVersion": "3.3.0",
      "doctypeVersion": 2,
      "importedAt": undefined,
      "importedFrom": undefined,
      "sourceAccount": undefined,
      "sync": Object {
        "45c49c15-4b00-48e8-8bfd-29f8177b89ff": Object {
          "contactsAccountsId": "45c49c15-4b00-48e8-8bfd-29f8177b89ff",
          "id": "people/96508",
          "konnector": "konnector-google",
          "lastSync": "2018-05-05T09:09:00.115Z",
          "remoteRev": "963fd240-d568-4b24-9f26-6e658d4e4958",
        },
      },
      "updatedAt": "2018-05-05T09:09:00.115Z",
      "updatedByApps": Array [
        "Contacts",
        "konnector-google",
      ],
    },
    "email": Array [],
    "id": "reinhold-jenkins-no-source",
    "metadata": Object {
      "google": Object {
        "metadata": undefined,
      },
      "version": 1,
    },
    "name": Object {
      "familyName": "Jenkins",
      "givenName": "Reinhold",
    },
    "note": undefined,
    "phone": Array [],
    "vendorId": undefined,
  },
]
`;

exports[`synchronizeContacts function should synchronize contacts: reinholdJenkinsInGoogle 1`] = `
Array [
  Object {
    "addresses": Array [],
    "biographies": undefined,
    "birthdays": Array [],
    "emailAddresses": Array [],
    "names": Array [
      Object {
        "familyName": "Jenkins",
        "givenName": "Reinhold",
      },
    ],
    "organizations": undefined,
    "phoneNumbers": Array [],
  },
]
`;
